<?xml version="1.0" encoding="utf-8"?>
<resources>

    <item name="tag_always_vertical" type="id"></item>
    <item name="tag_adjuse_height" type="id"></item>
    <item name="tag_scale_type" type="id"></item>
    <item name="tag_attribute_set" type="id"></item>

    <string name="version_name">3.1.0</string>

    <item name="view_tag_id" type="id"></item>
    <item name="view_tag_interface" type="id"></item>
    <item name="tag_no_default_icon" type="id"></item>

    <string name="app_name">Athene</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_my_wedding">MyWedding</string>
    <string name="title_activity_my_cart">MyCart</string>
    <string name="title_activity_wedding_show">WeddingShow</string>
    <string name="title_activity_wedding_diy">WeddingDIY</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="navi_none">None</string>
    <string name="navi_main">Main</string>
    <string name="navi_show">Show</string>
    <string name="navi_diy">DIY</string>
    <string name="navi_cart">Cart</string>
    <string name="navi_account">Mine</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fullscreen_view">FullscreenViewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_theme_wedding">ThemeWedding</string>
    <string name="title_wedding_packages">WeddingPackages</string>
    <string name="title_wedding_diy">WeddingDIY</string>
    <string name="title_wedding_photo">WeddingPhoto</string>
    <string name="title_wedding_video">WeddingVideo</string>
    <string name="title_lucky_day">LuckyDay</string>
    <string name="title_wedding_show">WeddingShow</string>
    <string name="see_more">See more</string>
    <string name="label_boutique">精</string>
    <string name="title_coupons">Coupons</string>
    <string name="title_my_favorite">My favorite</string>
    <string name="label_my_order">My order</string>
    <string name="label_my_evaluation">My evalution</string>
    <string name="label_my_diy">MY DIY</string>
    <string name="label_wedding_diy">Wedding DIY</string>
    <string name="label_groom">Groom</string>
    <string name="label_bride">Bride</string>
    <string name="label_sign_desk">Sigh-in desk</string>
    <string name="label_welcome_bg">Welcome background</string>
    <string name="label_main_stage">Main stage</string>
    <string name="label_wedding_car">Wedding car</string>
    <string name="title_mine">Mine</string>
</resources>