<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/account_header_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dip"
        android:orientation="horizontal"
        android:background="@color/white" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="34dip"
                android:layout_height="34dip"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_discount" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dip"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_coupons"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/main_gray"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:background="@color/list_divider_color" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="34dip"
                android:layout_height="34dip"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_favorite" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dip"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_my_favorite"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/main_gray"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/plate_divider" />

    <RelativeLayout
        android:id="@+id/my_order_container"
        android:layout_width="match_parent"
        android:layout_height="47dip"
        android:background="?android:attr/listSelector"
        android:clickable="true"
        android:paddingLeft="16dip"
        android:paddingRight="16dip" >

        <ImageView
            android:id="@+id/image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_order" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dip"
            android:layout_toRightOf="@id/image1"
            android:text="@string/label_my_order"
            android:textColor="@color/main_black"
            android:textSize="@dimen/text_size_14" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_enter" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/list_divider_color" />

    <RelativeLayout
        android:id="@+id/my_evaluation_container"
        android:layout_width="match_parent"
        android:layout_height="47dip"
        android:background="?android:attr/listSelector"
        android:clickable="true"
        android:paddingLeft="16dip"
        android:paddingRight="16dip" >

        <ImageView
            android:id="@+id/image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_evaluation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dip"
            android:layout_toRightOf="@id/image2"
            android:text="@string/label_my_evaluation"
            android:textColor="@color/main_black"
            android:textSize="@dimen/text_size_14" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_enter" />
    </RelativeLayout>

    <include layout="@layout/plate_divider" />

    <RelativeLayout
        android:id="@+id/my_diy_container"
        android:layout_width="match_parent"
        android:layout_height="47dip"
        android:background="?android:attr/listSelector"
        android:clickable="true"
        android:paddingLeft="16dip"
        android:paddingRight="16dip" >

        <ImageView
            android:id="@+id/image3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_diy_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dip"
            android:layout_toRightOf="@id/image3"
            android:text="@string/label_my_diy"
            android:textColor="@color/main_black"
            android:textSize="@dimen/text_size_14" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_enter" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/list_divider_color" />

</LinearLayout>