<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <include
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="353dip"
                layout="@layout/banner_view" />

            <include
                layout="@layout/plate_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dip"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_flower" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dip"
                    android:text="@string/title_theme_wedding"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>

            <com.athene.widgets.ExpandGridView
                android:id="@+id/grid_theme_wedding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dip"
                android:layout_marginRight="11dip"
                android:layout_marginBottom="11dip"
                android:horizontalSpacing="11dip"
                android:numColumns="2"
                android:stretchMode="columnWidth"
                android:verticalSpacing="11dip" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:src="@color/list_divider_color" />

            <TextView
                android:id="@+id/theme_wedding_more"
                android:layout_width="match_parent"
                android:layout_height="38dip"
                android:gravity="center"
                android:text="@string/see_more"
                android:textColor="@color/main_black"
                android:textSize="@dimen/text_size_14" />

            <include
                layout="@layout/plate_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dip"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_flower" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dip"
                    android:text="@string/title_wedding_packages"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>

            <com.athene.widgets.ExpandListView
                android:id="@+id/list_wedding_packages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/list_divider_color"
                android:dividerHeight="1px" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:src="@color/list_divider_color" />

            <TextView
                android:id="@+id/wedding_packages_more"
                android:layout_width="match_parent"
                android:layout_height="38dip"
                android:gravity="center"
                android:text="@string/see_more"
                android:textColor="@color/main_black"
                android:textSize="@dimen/text_size_14" />

            <include
                layout="@layout/plate_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dip"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_flower" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dip"
                    android:text="@string/title_wedding_show"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>

            <com.athene.widgets.ExpandListView
                android:id="@+id/list_wedding_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/list_divider_color"
                android:dividerHeight="1px" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:src="@color/list_divider_color" />

            <TextView
                android:id="@+id/wedding_show_more"
                android:layout_width="match_parent"
                android:layout_height="38dip"
                android:gravity="center"
                android:text="@string/see_more"
                android:textColor="@color/main_black"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>